k8s/dapr-placement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dapr-placement
  labels:
    app: dapr-placement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dapr-placement
  template:
    metadata:
      labels:
        app: dapr-placement
    spec:
      containers:
      - name: placement
        image: "ghcr.io/dapr/placement:1.15.4"
        command: ["/placement", "-port", "50005"]
        ports:
        - containerPort: 50005
---
apiVersion: v1
kind: Service
metadata:
  name: dapr-placement
spec:
  selector:
    app: dapr-placement
  ports:
  - protocol: TCP
    port: 50005
    targetPort: 50005
